--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
-synthesis_artifacts/** filter=lfs diff=lfs merge=lfs -text
+*.aocx filter=lfs diff=lfs merge=lfs -text
+*.xclbin filter=lfs diff=lfs merge=lfs -text
+synthesis_artifacts/b_eff/520n-21.2.0-20.4.0-iec/Network_intel filter=lfs diff=lfs merge=lfs -text
+synthesis_artifacts/RandomAccess/520n-21.2.0-20.4.0/RandomAccess_intel filter=lfs diff=lfs merge=lfs -text
