Add FFT host to lfs

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.xclbin filter=lfs diff=lfs merge=lfs -text
 synthesis_artifacts/b_eff/520n-21.2.0-20.4.0-iec/Network_intel filter=lfs diff=lfs merge=lfs -text
 synthesis_artifacts/RandomAccess/520n-21.2.0-20.4.0/RandomAccess_intel filter=lfs diff=lfs merge=lfs -text
+synthesis_artifacts/FFT/520n-21.2.0-20.4.0/FFT_intel filter=lfs diff=lfs merge=lfs -text
