Add Linpack_intel to LFS

--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,4 @@ synthesis_artifacts/GEMM/520n-21.2.0-20.4.0/GEMM_intel filter=lfs diff=lfs merge
 synthesis_artifacts/PTRANS/520n-21.2.0-20.4.0-iec/Transpose_intel filter=lfs diff=lfs merge=lfs -text
 synthesis_artifacts/PTRANS/520n-21.2.0-20.4.0-pcie/Transpose_intel filter=lfs diff=lfs merge=lfs -text
 synthesis_artifacts/STREAM/520n-21.2.0-20.4.0/STREAM_FPGA_intel filter=lfs diff=lfs merge=lfs -text
+synthesis_artifacts/LINPACK_DP/520n-cygnus-19.4-iec/Linpack_intel filter=lfs diff=lfs merge=lfs -text
