Add b_eff build artifacts for U280

--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,4 @@ synthesis_artifacts/PTRANS/520n-21.2.0-20.4.0-iec/Transpose_intel filter=lfs dif
 synthesis_artifacts/PTRANS/520n-21.2.0-20.4.0-pcie/Transpose_intel filter=lfs diff=lfs merge=lfs -text
 synthesis_artifacts/STREAM/520n-21.2.0-20.4.0/STREAM_FPGA_intel filter=lfs diff=lfs merge=lfs -text
 synthesis_artifacts/LINPACK_DP/520n-cygnus-19.4-iec/Linpack_intel filter=lfs diff=lfs merge=lfs -text
+synthesis_artifacts/b_eff/u280-2020.2-xdma-201920-3/Network_xilinx filter=lfs diff=lfs merge=lfs -text
