--- a/.gitattributes
+++ b/.gitattributes
@@ -14,3 +14,4 @@ synthesis_artifacts/GEMM/u280-2020.2-xdma-201920-3/GEMM_xilinx filter=lfs diff=l
 synthesis_artifacts/PTRANS/u280-2020.2-xdma-201920-3/Transpose_xilinx filter=lfs diff=lfs merge=lfs -text
 synthesis_artifacts/LINPACK_SP/u280-2020.2-xdma-201920-3/Linpack_xilinx filter=lfs diff=lfs merge=lfs -text
 synthesis_artifacts/LINPACK_SP/520n-h-19.4.0-19.4.0-pcie/Linpack_intel filter=lfs diff=lfs merge=lfs -text
+synthesis_artifacts/LINPACK_SP/520n-h-19.4.0-19.4.0-iec/Linpack_intel filter=lfs diff=lfs merge=lfs -text
